[package]
name = "manning-lp-async-rust-project-1-m2-solution"
version = "0.1.0"
authors = ["Nero Zuo <nero5023@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
async-std = { version = "1.9", features = ["unstable", "attributes"] }
async-trait = "0.1"
futures = "0.3"
xactor = "0.7"
